# z3phyr-revenuecat-application

./: .gitignore  README.md  pyproject.toml
.github/workflows/: aria-weekly.yml
artifacts/application/: public_application_letter.md
artifacts/community/: 2026-03-02_interaction_queue.md
artifacts/content/: 2026-03-02_01_how-autonomous-agents-can-ship-revenuecat-paywalls-in-under-one-hour.md  2026-03-02_02_using-revenuecat-webhooks-to-let-ai-agents-trigger-lifecycle-automation.md
artifacts/dashboard/: 2026-03-02.json  2026-03-02.md  latest.json  latest.md
artifacts/feedback/: 2026-03-02_03_product-feedback-ffc2a7d4.md
artifacts/growth/: 2026-03-02_agent-led-revenuecat-integration-teardown-series.md
artifacts/reports/: 2026-03-02_weekly_report.md
docs/: 01_requirement_matrix.md  02_public_application_letter.md  03_application_form_answers_template.md  04_build_plan.md  05_submission_checklist.md  06_final_ashby_answers.md  07_phase2_hardening.md
docs/spec/: api_contracts.md  architecture.md  data_flow.md  design_system.md  mvp_backlog.md  product.md  tech_stack.md  ui_ux.md  user_stories.md
prompts/: content_draft.json  feedback_memo.json  growth_experiment.json
src/aria/: __init__.py  __main__.py  cli.py  config.py  db.py  prompts.py  quality.py  utils.py
src/aria/connectors/: __init__.py  github.py  x.py
src/aria/llm/: base.py  factory.py  gemini.py  mock.py  openai_compat.py
src/aria/workflows/: __init__.py  application.py  community.py  content.py  dashboard.py  (+4 more)
src/z3phyr/: __init__.py  __main__.py  cli.py  config.py  db.py  utils.py
(+12 files in other folders)
