[project]
name = "z3phyr-agent"
version = "0.1.0"
description = "Agentic AI Developer & Growth Advocate system for RevenueCat application and delivery."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
